✨ feat(scio-cosmosdb): feat(azure-cosmosdb): Add support for cosmosdb with Core (SQL) API
Refs: #4675